--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
   "type": "module",
   "main": "/src/index.js",
   "scripts": {
-    "start": "nodemon ./src/index.js"
+    "start": "nodemon ./src/index.js",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --WatchAll"
   },
   "dependencies": {
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
+  },
+  "devDependencies": {
+    "jest": "^30.0.5",
+    "supertest": "^7.1.4"
   }
 }
